# algos

./: .gitignore  README.md
percolation/: Cargo.toml
percolation/src/: lib.rs  main.rs  percolation.rs  stats.rs  union_find.rs
permutation/src/: deque.rs
permutation/tests/: deque_test.rs
