[package]
name = "percolation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.10", features = ["derive"] }
cpu-time = "1.0.0"
indicatif = { version = "0.17.3", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.7.0"
